# Speech-to-text

./: README.md  STT.py  environment.yml  generate_syllable.py  generate_syllable_group.py
tsylb2_linux/: config.status  temp_input.txt  temp_output.txt  tsylb2
tsylb2_mac/: Makefile  addstres.c  config.status  configure  configure.in  configure.in~  letfcns.h  plex_fcndcls.h  temp_input.txt  temp_output.txt  tsylb2  tsylb2.c  tsylb2.h
tsylb2_mac/autom4te.cache/: output.0  requests  traces.0  traces.2
